Code sudah dirubah

--- a/Web Fortofolio/fortofolio.html
+++ b/Web Fortofolio/fortofolio.html
@@ -36,7 +36,7 @@
         <h1>Halo, aku Manggala!!</h1>
         <h3>Bus Mania, bukan <span>Basuri Mania!</span></h3>
         <p>
-          Hai! Saya seorang busmania atau kalanan yang suka banget
+          Hai! Aku seorang busmania yang suka banget
           mengabadikan momen bis lewat kamera. Karena hobi ini, saya bahkan pernah
           diliput beberapa media—rasanya seru bisa berbagi cerita lewat karya.
           Di bawah ini, ada cerita singkat tentang saya dan seputar hobi saya!
@@ -73,6 +73,9 @@
           Bus Restu Panda ini terkenal dengan livery-nya yang bergambar Panda
           dan "Kids Friendly" banget. Nahhh, disitulah awal mula anak kecil bernama
           Manggala ini suka sama bis!!
+          Saat ini, aku juga sering mengabadikan momen ketika saya ketemu / menaiki
+          bis. Pasti ada yang kurang rasanya kalau naik bis tapi momen itu
+          ga terabadikan!
         </p>
       </div>
     </section>
